== Changelog ==
= 1.6.1 =
* Feature: Favorite brands
* Fix: Brand logo full size option for single product
* Fix: Coupons brands restriction (thanks @josk79)
* Fix: Import products fixes
* Fix: PHP7 warning on 'class-perfect-woocommerce-brands.php'
* Enhancement: Filter by brand widget enhancements
* Enhancement: Carousels enhancements
* Enhancement: JS and CSS minified
= 1.6.0 =
* Feature: Migrate brands from the official WooCommerce Brand's plugin (pull request, thanks Chunkford)
* Feature: Support for the new WooCommerce product importer/exporter
* Feature: Brand tab in single product page
* Enhancement: Brands dropdown widget selects the current brand if is a brand archive page
* Enhancement: Hide the brand name in "Display all brands" shortcode (title_position="none")
* Enhancement: Important enhancements for the REST API
* Fix: The brand property is not recognized by Google
* Fix: No shortcode appeared in some Visual Composer versions
* Fix: Filter by brand widget fixes
* Fix: Brand description adds description twice
* Other minor bug fixes and code improvements
= 1.5.2 =
* Dev: Adding brands to a products via the REST API + updating namespaces to include v2 (pull request, thanks doekenorg)
= 1.5.1 =
* Fix: Fatal error on old php versions (< 5.5)
= 1.5 =
* Feature (Tool): Install dummy data (generate generic brands and assigns them to available products randomly)
* Feature: Restrict coupon by brands
* Feature: Get system status details for a better plugin support
* Feature: Import brands from "Ultimate WooCommerce Brands"
* Dev: 'pwb_before_single_product_brands' and 'pwb_after_single_product_brands' hooks added
* Dev: Basic WordPress REST API support
* Enhancement: Better HTML markup for the brand banner and the brand description for the archive product page
* Enhancement: Brands importer improvements
* Enhancement: New params for "pwb-all-brands" shortcode
* Fix: The brand description is appearing twice